@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX TeXmacs.desktop 268 SHA256 9872d60c5080260a3dcc842cf1f74557954b0830b204ffc0e255f7ee52a13825 SHA512 27bc36161b4b5c9b4e18659caaf3a5f2007f3ccb8e1200abb98a287c5540a60aa94bd3a4fb5c9469421f1e755c246ee7f3f489fbd9cb84a03bd73a6b4f40bbe3 WHIRLPOOL 3266496e18c7858827ec44ac5c28f2cbc1213d20fba469b019b59ff32d4a2905c623e2146dd289e4cd75c10ab0528ed4609a758a81310d32e9d5a2391f115b7e
 AUX texmacs-mupad.patch 693 SHA256 c01e7c28847d0f66721438b764de66f806ec5980d4d27afb9ed4e0414364d714 SHA512 3b8a2e032b8f2bb78a6759d5c68a9c1a1b0934ac7b43079de3ccf8018ec3467f648494e8e31819e3983ea1d5888d26c8c8e5127f226ca9c0247f87964f395174 WHIRLPOOL 98ed405606d94edbd46de91cdabec77398285493e8a74b65fac34e2942d62c82f267a9e2a1c9ec393f6f6174a756f93ca4584dada1aad00fa90ab14a5b325a21
@@ -8,32 +8,30 @@ AUX texmacs-plugins.patch 2924 SHA256 53e74c717e2e4d3b33e5b75af64b81213f68ece596
 AUX texmacs-strip.patch 710 SHA256 851e6c9468d2db87d7c19b1041ab94a88dc7894af74edc06dec8f8b4b52eb701 SHA512 3eff413d71c01d21da766c7780532360834b30450f9e09699f6f826b41d4f42075255773f056abed58d638c364947a77e2006faca648dc986325a464a4f4d638 WHIRLPOOL de7f8596f7a517bd0d7a0d397596ab2f0ca5e60ef76d4b480243523d3c90306aabab8054c0e7eb40c32d52c21ce0cc699a0647c5308e9a953c781edd6592b9bc
 AUX texmacs-updates.patch 1387 SHA256 40319fc736ac6a043b726c7551d76c77e71cc29d081282a3546875e4ee23f355 SHA512 209c5f64e21ae76fe41419101afb98ce4f61f040e9d29e3dbe37ec5bb0e16a1f3dd5aebe381db99e8d7278c5c36cd1654f78ba4af69e032670b1fdb62aafbda1 WHIRLPOOL 4802a89a411f0bf1acf892d6ec2882d8dc47615bbc77e44c28281267af126d740ec3af7bd2d561a38db1aa9251cf45c06c3da10cb2f2b4b213efba1caf4a5009
 DIST TeXmacs-1.0.7.2-src.tar.gz 4763348 SHA256 98ca44418f4d4644bdee03add2e2baf18f0839d4d8336189ff4a095329f7a2ba SHA512 e8ba14c8419de262c13e5eddc003ba0d341b4d570685526c73f0cf1bf437dcae86ac37952147b72b653eb66bcdd94f41eca9ff000f8f0fd80786ba13ee1b57fc WHIRLPOOL ca208be8c784e8a957421ce2b5db94958c38212c71ccb01d792ad9281bbabad3fd58a38e5ed48d8c2240a52e9c67b072080e277e631f210a1997ffd3f74bd8cc
-DIST TeXmacs-1.0.7.20-src.tar.gz 18599912 SHA256 02828e5b8286db43a501c5924d5718f2c7702ac5fa0541d5b6ce8fda220fdef8 SHA512 bb5f8d47e37cb8228a7096176595d1243abe8c9935c33f2779e6a85d8903d8d28a425f56995a12621cdaa1c096732995a34437cc6501b8ffc71cc1f5758e9b66 WHIRLPOOL 0117f3bfa7d02b1ddd0113f17b12b255b13d33e2795efd966c56ce968a711a33c20dea275b4b91f2ae0b77acd9eb90bc0db02ffd7f3a39a7868c870841c3a1cb
 DIST TeXmacs-1.0.7.21-src.tar.gz 18712991 SHA256 0c945611cd057c4af5f7c2232d19b8129caeef0289fa43a53bab1dabb2d603d2 SHA512 7a825297b84c34aa7b097026932a99bcaf7bdddeb44ad7d141cae1b03893e2472241f4cf73f3798dfebd9b226f94bc0ef665d5defb1b133d897e0ba3c8213fee WHIRLPOOL 8d12788ac4458e3b5085d1e11e3c5b1a92de1027fed3652bc232f395e2e77bddd141d4607690990c8a8ad29624f151557bcd9b20847b95d2c164e9772c103976
 DIST TeXmacs-1.99.1-src.tar.gz 19048884 SHA256 7e8425d65b1a02f270eaa021389cb9c3f627c9064cc986bd1ec7f66e0681b2ac SHA512 4b599e020aafa5b0e832d5e4ca9d1fe2013f1880b32f4ddc63e42582ed553d1e6a8ac9a5b2189db040e7bbaef3faffae5c8f79da3657cb2356ba0700f85f7840 WHIRLPOOL 5457169699cbc4ccded02f0a3ee369910ade70f902f1a41d9c43349acb940022afdb08611681e0b20da66a09b507aaa648c147d4a57d9a7e8d12bb53795b7003
 DIST TeXmacs-600dpi-fonts.tar.gz 2899193 SHA256 e8eeb3c97a1405fd037b0567f683a6d2225d47c7829893b9768bd6c1c707cc81 SHA512 b04a9661a9b59aec46279fd78121e56b24fc66df821f62baa09df179958d3260bde04fc17e9c1dbbe186dbc39f4580f34858c1ed2c7549c8249c42ac81b27d28 WHIRLPOOL 5a29ff42d89fd54150effe0ef0b395ee09d37c098725455e80608f60395fb736597c249e6b1b76e68d05e5cc2eec6b8d0567c6f54cbd37d76f1b419b0884323c
 EBUILD texmacs-1.0.7.2-r1.ebuild 1586 SHA256 b4dbd79fc46a5d95d6150af5b42b616156d4f5d4f66a3886bc54947571792d3b SHA512 2079385ad354f6b700621e8af6dbac083e20b45ac6620edeefffee8d6022afadac50cd38b50f22185b78f8f33b673c704f1dc1fc81c7f1ada73340fef8c8acd4 WHIRLPOOL e1d446ca28fac791b689034d26b383c952bac5c4fdd6d7d86c498745cdfc277848a472945fadf943195b9af34980e484ce55f0a06b077469ff117dcf91d04637
-EBUILD texmacs-1.0.7.20.ebuild 1661 SHA256 bd977e240e52b72e50396fcc938e2b914b3aac885d8f6242c347e0a6db5d2f7b SHA512 ebb9cf235eb6e7e01f11e1bcd184dac282a075194c97dccf44045050bb29b5ecbb110347dda704b82692112f2825ea07ae8f3727ae935ff5d0331bb67581f6b1 WHIRLPOOL 04ebb5d2abe9995092e3d2414c50cefde0b954d14ac21b59d9021f57c22f88ed9d21e38a9222d7ba518916430218f2472e457ae93e0403e559eb28652ee6f96c
-EBUILD texmacs-1.0.7.21.ebuild 1663 SHA256 432d9b261b25432b05bdaec40ae4a67710a3dd36f5c98bafd45889dd15c50683 SHA512 d5764508e1488d0ae78819d481f43cd968d790ffc00fe04b9c11d2d75baa7a62b3f2c0eee58a4b82d6367dd4994ef49cfcece0a41ef5e6ee39fd6a0978f64893 WHIRLPOOL ddece45f39e1f5e8a1a036112d9d408d7030afb3e0fec9bb224b0b2e2bb9db6d2f087fba31be4bd2ebd5a9f7ebe37e486ff1f3ad33838185cd2d36c04a7ee646
+EBUILD texmacs-1.0.7.21.ebuild 1664 SHA256 048776436040ac2fc684db4f8516ffd393ad2f7421886293e20f24181c1a9ab2 SHA512 7d5e6238d28c5c29144d79366ea6b4d00bbbc60b1bab2bb78e6858f63752780aa68db3b13281f35bf024a45e08af87b60f8b71a3b346e4de9517fbc6e86251d6 WHIRLPOOL d66f37315c63b56cfa22183f6e6147cbc4103b4c7231f931fa0c25237fade1f3dffb42145104c15ee2275aee21bc7463e654e52cda4d64c0669fa439da1a17ba
 EBUILD texmacs-1.99.1.ebuild 1696 SHA256 2459ba3b9efe3a16f5e6274ce24f13d776b5cd7ad86b932246a0010fb3d66071 SHA512 12b599f6b75f4781eae1d307c4cee58882a87fa21212b1804dd8ceb943a41e009c367b21aacfffbd617f3110a49e79bc006ecc67956f537c62938bfb455be427 WHIRLPOOL 2cd057328a6a757b37a6614f45903c96514ef7089187eb7b2df1894c529342d46d7f460f6280be0151effceed07b54ea33d350ec558e4184f8877baf4e60ee29
-MISC ChangeLog 18574 SHA256 ce34b75968413ecc88ac1bd01ce44aac84dfc8eaf4d6e8546c9938683523beb0 SHA512 05ea89af26b9a2595dd8bb754965150d15627ccde40dd44a0e62970549cd2731201c4237785f68a0c0e1f6d52d8b3ea4fd1ae4cf56271f379945094f42361a11 WHIRLPOOL cb142bed29c8bb48639d67c8a6207748ceabeb571967373c77cb2d277b6398a11f6a6e67bd606dd782ea1f98797a192f26a4d0ed01b7f6bd4cd9af26f3dee1cd
-MISC metadata.xml 411 SHA256 eaf11532a7fc9ffa1b746aeeeee14b23deb10c51434ff901e8ce522fe4b15bd3 SHA512 0424b8cdd27caccb33832e3bedbd7e47b0c2e4c935d765a544905a432a7e57eb9e8b7997e5a505159b61753a3b409dcb91dc3b25390d60669b59e8821052b243 WHIRLPOOL 49395fb07e3d8e1a425289d0b4df85e552f2e5c06411618e84efaf17eea48058a5c5f0d4bdd6dc31ae27749b8953642c19c1607acda885f30411ce5451d16642
+MISC ChangeLog 18717 SHA256 0f0f5ea2507603222c86e22896362c64f39692961126b2664cca587c046419b5 SHA512 779f62cc7dfe966d430121fbacf2f186e8669ed1d6525e4f5855542087d4ef62172b05055694569ad19fad515fdb2471dbed95fc58ae49211a70a6d63f5ff0c2 WHIRLPOOL 4bd3ab7d4e5348f43bed499840406d87f39761f9c271837f7d16ae9b0edadcf4c7fdb6118d68069ca11bf9be30062c4942a3a5d176b5806a94d1192c7021e7d5
+MISC metadata.xml 417 SHA256 5e17e11133ada07ae71363bf1d5b4c63659967c33cdfa720c62e2b540e3d76dd SHA512 08a017bba16bca8223daf20d8fc23776d693d40b3d8c752f0c805ff629a07267b09967ea5e52d1c9ba93c936f7fb5031428c95d28d4b8e1cde1ad293b2a56118 WHIRLPOOL 86ebbf95d3c508a57bd3085fe6481b08c14f87bf93d73447d37307e05b7d7cc38b45de0783d937aaf834c9eb46c0dcb2ba6d4fd92067adf7346f1a0ba342ac79
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQJ8BAEBCABmBQJTYj39XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQwOEM0RURGNjY5QzVBNjMwRkU3REVCOTQz
-QUZGQ0U5NzREMzRCRDhDAAoJEDr/zpdNNL2MbQ4P/33mU5xLOR7i9TlLNo1IJ5Gp
-pr2mK8DVv2bGwGVWxx+71gGFPRJmDJH5K/jEDdJi8bscctkKUWum3xCrHDml9aje
-YQ77h/ug4X+p9ieu8cqocmYo+FCSiXRRfBjQAEpcQhaDJuScMeUclZTYLaZCJ4lw
-7Bx2Uvseaxka5sEMyIYZxanADszyGo22/M7p7dEQ9d16m+hvCUHvMsr4OEzyJ23i
-qMDr6SLjnXN/b/VVZZ9wVrgUDN1RucWzeLqEWf5sR3GodmqeOlXes7mjZD5gSAyL
-3F+9Omi1y2giky1u6N6wv2NBQPFIEOcktfPyX7VYa3oXOu341qbQ4Xm2OqwyyW+f
-WY5tx6r9W+leKxJWQgtN1EAb176dpwWlIqPOszvxn2foHy5rwHiBsc0M0ZcAFDc4
-nF6Swk0JaCb9eVGwaPc99fSi/mS4UMShoAs3LlxhW/Gwz2xkMM6GUO/h+KVqYSpT
-Yo5PeVtv6p3MR40Q9aE6Lz49ufZW0ufqkrnkgVAUFU2f17OP9FMAiVFSFFadJLW2
-s0G0D65y1NA3HsOzHm10Mln9xSCgl9eM5ZcyDfYiIEAzRTEnmo3bidFOvyAJVJNN
-ohlbAfVryUS/aowTkHlqDeage8hZqNV3GeR5LSkO08rYolYmlWUTnjVX2kIzwcbX
-R2HQope5mSk8jHQVDtEa
-=oB+k
+iQJ8BAEBCgBmBQJTkBZ2XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVircMQP+gN3b9jyzb4+531xyRIfitDH
+Sf3c7ovQnr3qMh5mFXIK+pcGQvGFqpXCJ3swKvOaTKsMck4wGN7RXUJKDBE/s1E6
+sdTKUi6KciwZDTqBDTNkCD8eTzF92hW8+HvVJvGPW3Bo9c9ShxXlaikwaXNOj0wI
+OnPskN1pXGpnKloMAJXYfjcGM9/NBf+QIMc5tjJpnHreitSgSer3x3I/Xm96v3fr
+PR0A5zsdBDyjuZSARnBnSUVF0Wd7QtD3NucMuc1AETD6pjjDHInWuKdNLjeOmlbZ
+vy3zRmyWlpqtkMpFzI6ArVldxLkWKs27kgfNaVMafIPhhe2FW0OWgQ5rUket+HHd
+NcIdZRJS5KcGe02UYksE6ebyFBPswsALi8Byl8O4lBcPJIel5adxq0eju9BZNV7n
+cTUAzr1HZbvK8n2BPBTB8TOcQQy6rciIW9m7B20ksfx1L8p8s9K+mVPcE0hud19R
+Ysx7P9LAS8NWcalPVvCuRnjCICe3weAQsyM+QZ72RqXlLUdROVlvteLv0QjEKlyX
+rBpXSei5QYKKxfG9SBQyBF4H1MZW9sg8it7r5dhjfrCp/NB7T0M5Z3vT4hbua9S7
++rI3TH+eOEgWpYtZmyGIGkLOEf8TMVzIpgWY6VPPtskQNV9wZiAQwyBU9M5n/WwG
+OcY0kmrbO+HAc7ee9yxd
+=wHpH
 -----END PGP SIGNATURE-----
