@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>sci</herd>
-<maintainer>
-        <email>grozin@gentoo.org</email>
-        <name>Andrey Grozin</name>
-</maintainer>
-<use>
-  <flag name='netpbm'>Add support for <pkg>media-libs/netpbm</pkg></flag>
-  <flag name='pdf'>Add the experimental native pdf export</flag>
-</use>
+  <herd>sci</herd>
+  <maintainer>
+    <email>grozin@gentoo.org</email>
+    <name>Andrey Grozin</name>
+  </maintainer>
+  <use>
+    <flag name="netpbm">Add support for <pkg>media-libs/netpbm</pkg></flag>
+    <flag name="pdf">Add the experimental native pdf export</flag>
+  </use>
 </pkgmetadata>
