@@ -1,13 +1,13 @@
 DEFINED_PHASES=configure install postinst postrm prepare
-DEPEND=dev-scheme/guile[deprecated] virtual/latex-base app-text/ghostscript-gpl media-libs/freetype x11-libs/libXext x11-apps/xmodmap qt4? ( dev-qt/qtgui:4 ) imlib? ( media-libs/imlib2 ) jpeg? ( || ( media-gfx/imagemagick media-gfx/jpeg2ps ) ) svg? ( || ( media-gfx/inkscape gnome-base/librsvg:2 ) ) netpbm? ( media-libs/netpbm ) spell? ( app-text/aspell ) x11-proto/xproto !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.14:1.14 ) >=sys-devel/autoconf-2.68 sys-devel/libtool >=sys-apps/sed-4
+DEPEND=app-text/ghostscript-gpl dev-scheme/guile[deprecated] media-libs/freetype x11-apps/xmodmap x11-libs/libXext virtual/latex-base imlib? ( media-libs/imlib2 ) jpeg? ( || ( media-gfx/imagemagick media-gfx/jpeg2ps ) ) netpbm? ( media-libs/netpbm ) qt4? ( dev-qt/qtgui:4 ) spell? ( app-text/aspell ) svg? ( || ( media-gfx/inkscape gnome-base/librsvg:2 ) ) x11-proto/xproto !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.14:1.14 ) >=sys-devel/autoconf-2.68 sys-devel/libtool >=sys-apps/sed-4
 DESCRIPTION=Wysiwyg text processor with high-quality maths
-EAPI=4
+EAPI=5
 HOMEPAGE=http://www.texmacs.org/
 IUSE=imlib jpeg netpbm qt4 svg spell
 KEYWORDS=~alpha ~amd64 ~ppc ~sparc ~x86 ~x86-interix ~amd64-linux ~x86-linux
 LICENSE=GPL-3
-RDEPEND=dev-scheme/guile[deprecated] virtual/latex-base app-text/ghostscript-gpl media-libs/freetype x11-libs/libXext x11-apps/xmodmap qt4? ( dev-qt/qtgui:4 ) imlib? ( media-libs/imlib2 ) jpeg? ( || ( media-gfx/imagemagick media-gfx/jpeg2ps ) ) svg? ( || ( media-gfx/inkscape gnome-base/librsvg:2 ) ) netpbm? ( media-libs/netpbm ) spell? ( app-text/aspell )
+RDEPEND=app-text/ghostscript-gpl dev-scheme/guile[deprecated] media-libs/freetype x11-apps/xmodmap x11-libs/libXext virtual/latex-base imlib? ( media-libs/imlib2 ) jpeg? ( || ( media-gfx/imagemagick media-gfx/jpeg2ps ) ) netpbm? ( media-libs/netpbm ) qt4? ( dev-qt/qtgui:4 ) spell? ( app-text/aspell ) svg? ( || ( media-gfx/inkscape gnome-base/librsvg:2 ) )
 SLOT=0
 SRC_URI=ftp://ftp.texmacs.org/pub/TeXmacs/tmftp/source/TeXmacs-1.0.7.21-src.tar.gz
 _eclasses_=autotools	5256b4f4c1798109f39f308f9f7eaf5f	eutils	025442f2eecab39ad0b4e541b6e142af	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	gnome2-utils	f658eba3cc594a21cf6eef4af47daa90	libtool	b9b3340e3a19510f0d9f05cfccbf209f	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=4c9a9393d644cbc21d2f053f2125bbfe
+_md5_=35b55a21b95cec8d67a8169a24971c21
